# ruby-imgui-dev

./: .gitattributes  .gitignore  Gemfile  README.md  imgui-bindings.gemspec
examples/: imgui.ini
imgui_dll/: CMakeLists.txt  Makefile  Makefile.bat  build_imgui_windows.cmd
lib/: imgui.rb  imnodes.rb
libc/: tools.c
libc/cimgui-knobs/: cimgui-knobs.h
libc/fonticon/: IconsFontAwesome6.rb  IconsFontAwesome6.zig  README.md
libc/imspinner/: cimspinner.h  cimspinner_config.h
